--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,61 @@
-<h1>Hello this is flats index</h1>
+<div class="container">
+  <div class="row justify-content-around">
+    <h1 class="text-center"> Hello this is flat index!</h1>
+    <% @flats.each do |flat| %>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Description</h5>
+              <p class="card-text"><%= flat.description %></p>
+              <p><%= flat.address %></p>
+              <p><%= flat.price %> €</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
-<% @flats.each do |flat| %>
-  <p><%= flat.address %></p>
-  <p><%= flat.price %> €</p>
-<% end %>
+
+
+
+
+
+
+
+
+<%#
+
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div> %>
+
+<%#
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+</div> %>
