--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= @flat.photos.each do |photo| %>
+  <% @flat.photos.each do |photo| %>
     <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
   <% end %>
     <h1><%= @flat.address %></h1>
