--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<a href="..." class="btn btn-primary">Click me</a>
+<div class="group-div">
+  <div class="dashiconspets-div"></div>
+  <div class="rectangle-div home-background"></div>
+  <div class="main-text-div">
+    <b class="main-text-b">Hello! Is your Pet ready to move ? </b>
+  </div>
+  <div>clhome-background</div>
+  <div class="secondary-title-div">
+    <div class="secondary-title-div1">
+      Finding a place for you and your pet, has never been easier!
+    </div>
+  </div>
+  <div class="group-div1">
+    <div class="rectangle-div1"></div>
+    <div class="pettyhouse-div">Pettyhouse</div>
+  </div>
+</div>
