add button show

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -13,6 +13,7 @@
               <p class="card-text"><%= flat.description %></p>
               <p><%= flat.address %></p>
               <p><%= flat.price %> €</p>
+              <%= link_to "Rent it", flat_path(flat) %>
             </div>
           </div>
         </div>
