--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -8,8 +8,9 @@
             <%= f.input :address %>
             <%= f.input :price %>
             <%= f.input :description %>
-            <%= f.input :pet_min_size %>
-            <%= f.input :pet_max_size %>
+            <%# <%= f.input :pet_min_size %>
+            <%= f.input :pet_min_size, collection: ['Smal', 'Medium', 'Large'] %>
+            <%# <%= f.input :pet_max_size %>
             <%= f.input :photos, as: :file, input_html: { multiple: true } %>
             <%= f.submit class: 'btn btn-primary' %>
           <% end %>
