--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,22 @@
 .avatar {
-  width: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .avatar-large {
-  width: 56px;
+  width: 45px;
   border-radius: 50%;
 }
 .avatar-bordered {
-  width: 40px;
+  width: 50px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: rgb(0, 0, 0) 1px solid;
 }
 .avatar-square {
   width: 40px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: rgb(0, 0, 0) 1px solid;
 }
