--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,16 +5,17 @@
   align-items: center;
   background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), image-url("Peyyhouse.jpg");
   background-size: cover;
+  padding-top: 200px;
   }
 
   h1 {
     font-weight: bold;
-    font-size: 33px;
+    font-size: 38px;
     margin-bottom: 10px;
   }
 
   p {
-    font-size: 18px;
+    font-size: 23px;
     font-weight: lighter;
     margin-bottom: 40px;
   }
