--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,19 +1,32 @@
 <div class="container">
-  <div class="row justify-content-around">
     <h1 class="text-center"> Hello this is flat index!</h1>
+
+      <%= form_tag flats_path, class: "d-flex justify-content-center", id: "search-form", method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a flat"
+        %>
+        <%= submit_tag "Search", class: "btn btn-primary" %>
+      <% end %>
+  <div class="row justify-content-around">
     <% @flats.each do |flat| %>
       <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <%= cl_image_tag flat.photos.first.key, height: 300, width: 400, crop: :fill %>
+            <%= cl_image_tag flat.photos.first.key, height: 232, width: 179, crop: :fill %>
           </div>
           <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title"><%= flat.title %></h5>
-              <p class="card-text"><%= flat.description %></p>
-              <p><%= flat.address %></p>
-              <p><%= flat.price %> €</p>
-              <%= link_to "Rent it", flat_path(flat) %>
+            <div class="card-body d-flex flex-column h-100 align-content-between justify-content-between">
+              <div>
+                <h5 class="card-title"><%= flat.title %></h5>
+                <%# <p class="card-text"><%= flat.description %>
+                <p class="card-description"><%= flat.address %></p>
+              </div>
+              <div class="d-flex align-items-center justify-content-between">
+                <h3 class="m-0"><%= flat.price %> € / Month</h3>
+                <%= link_to "Rent it ", flat_path(flat), class: "btn bt-lg btn-primary" %>
+              </div>
             </div>
           </div>
         </div>
@@ -21,42 +34,3 @@
     <% end %>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-<%#
-
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-</div> %>
-
-<%#
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div> %>
