--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,15 +11,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link"  %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Flats", flats_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Become a Host", new_booking_path, class: "nav-link" %>
-        </li>
+        <div class="d-flex center">
+          <li class="nav-item active">
+            <%= link_to "Home", root_path, class: "nav-link"  %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Flats", flats_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Become a Host", new_booking_path, class: "nav-link" %>
+          </li>
+        </div>
         <li class="nav-item dropdown">
           <%= image_tag "https://i.pinimg.com/236x/f2/e0/80/f2e080c7d758bef20ecc897450cec463.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
