--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,27 +7,8 @@
           placeholder: "See your bookings here!"
         %>
       <% end %>
-    <div class="row justify-content-around">
-      <% @bookings.each do |booking| %>
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <%= cl_image_tag booking.photos.first.key, height: 232, width: 179, crop: :fill %>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body d-flex flex-column h-100 align-content-between justify-content-between">
-                <div>
-                  <h5 class="card-title"><%= booking.title %></h5>
-                  <%# <p class="card-text"><%= flat.description %>
-                  <p class="card-description"><%= booking.address %></p>
-                </div>
-                <div class="d-flex align-items-center justify-content-between">
-                  <h3 class="m-0"><%= booking.price %> € / Month</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
+
 </div>
+<% @bookings.each do |booking| %>
+  <p><%= booking %></p>
+<% end %>
