--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,6 +17,18 @@
     font-weight: bold;
     font-size: 38px;
     margin-bottom: 10px;
+    font-family: 'Familjen Grotesk', sans-serif;
+  }
+
+  h2 {
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 10px;
+    font-family: 'Familjen Grotesk', sans-serif;
+  }
+
+  p {
+    font-size: 20px;
   }
 
   .slogan {
@@ -86,3 +98,8 @@
       text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
     }
   }
+
+.flat-banner {
+  background-color: gray;
+  padding: 25px;
+}
