--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,11 +1,49 @@
-<div>
-  <% @flat.photos.each do |photo| %>
-    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-  <% end %>
-    <h1><%= @flat.address %></h1>
-    <h2><%= @flat.price %></h2>
-    <h2><%= @flat.description %></h2>
-    <h2><%= @flat.pet_min_size %></h2>
-    <h2><%= @flat.pet_max_size %></h2>
+<%# <%= link_to "Book Now!", new_booking_path %>
+<div class="flat-banner">
+  <h1><%= @flat.title %></h1>
+  <h2><%= @flat.address %></h2>
 </div>
-<%= link_to "Book Now!", new_booking_path %>
+<div class="container">
+  <div class="row text-center">
+    <div class="container-fluid">
+      <div class="my-3">
+        <% @flat.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
+      </div>
+    </div>
+      <div class="d-flex justify-content-around">
+        <div class="calendar-card">
+          <p><%= @flat.description %></p>
+          <%# <h2><%= @flat.pet_min_size %>
+          <p>Pet Size: <%= @flat.pet_max_size %></p>
+          <p>Price: <%= @flat.price %> $ </p>
+        </div>
+
+        <div class="calendar-card"><%#  col-xs-12 col-sm-10 col-sm-offset-1 %>
+          <h2>Select your date</h2>
+          <%# <%= simple_form_for @booking do |f| %>
+            <%# <%= f.input :confirmation_status %>
+          <%= form_with model: Booking.new, authenticity_token: true do |f| %>
+          <%= f.date_field :start_date,
+            data: {
+              controller: "flatpickr",
+              mode: "range",
+              flatpickr_date_format: "d-m-Y",
+              flatpickr_min_date: Time.zone.now,
+              # inline: true,
+              enableTime: true,
+              minTime: "09:00",
+              maxTime: "22:00"
+              # position: "auto"
+            }
+          %>
+          <%= yield %>
+          <p></p>
+            <%= link_to 'Create booking', bookings_path(@edit_booking) %>
+          <% end %>
+        </div>
+      </div>
+
+  </div>
+</div>
