prize/seed fixed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,3 +2,16 @@
   padding: 15px 20px;
   background-color: aliceblue;
 }
+
+.card1 {
+  border-radius: 8px;
+  padding: 0;
+  background-color: transparent;
+  box-shadow: 3px 3px 5px black ;
+}
+
+.card-title {
+  font-size: large;
+  margin-bottom: 30px;
+  font-weight: bolder;
+}
