--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -13,37 +13,44 @@
       </div>
     </div>
       <div class="d-flex justify-content-around">
-        <div class="calendar-card">
-          <p><%= @flat.description %></p>
-          <%# <h2><%= @flat.pet_min_size %>
-          <p>Pet Size: <%= @flat.pet_max_size %></p>
-          <p>Price: <%= @flat.price %> $ </p>
+        <div class="card w-50">
+          <div class="card-header">
+            Details
+          </div>
+          <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p><%= @flat.description %></p>
+              <footer class="blockquote-footer">Pet Size: <cite title="Source Title"><p> <%= @flat.pet_max_size %> </p></cite></footer>
+              <footer class="blockquote-footer">Price: <cite title="Source Title"><p> <%= @flat.price.truncate %> $ </p></cite></footer>
+            </blockquote>
+          </div>
         </div>
 
-        <div class="calendar-card"><%#  col-xs-12 col-sm-10 col-sm-offset-1 %>
-          <h2>Select your date</h2>
-          <%# <%= simple_form_for @booking do |f| %>
-            <%# <%= f.input :confirmation_status %>
-          <%= form_with model: Booking.new, authenticity_token: true do |f| %>
-          <%= f.date_field :start_date,
-            data: {
-              controller: "flatpickr",
-              mode: "range",
-              flatpickr_date_format: "d-m-Y",
-              flatpickr_min_date: Time.zone.now,
-              # inline: true,
-              enableTime: true,
-              minTime: "09:00",
-              maxTime: "22:00"
-              # position: "auto"
-            }
-          %>
-          <%= yield %>
-          <p></p>
-            <%= link_to 'Create booking', bookings_path(@edit_booking) %>
-          <% end %>
+        <div class="card w-25">
+          <div class="card-header">
+            Select your date
+          </div>
+          <div class="card-body">
+              <%= form_with model: Booking.new, authenticity_token: true do |f| %>
+            <%= f.date_field :start_date,
+              data: {
+                controller: "flatpickr",
+                mode: "range",
+                flatpickr_date_format: "d-m-Y",
+                flatpickr_min_date: Time.zone.now,
+                # inline: true,
+                enableTime: true,
+                minTime: "09:00",
+                maxTime: "22:00"
+                # position: "auto"
+              },
+              style: "width:230px; text-align:center"
+            %>
+            <%= yield %>
+            <p></p>
+              <%= link_to "Create booking ", bookings_path(@edit_booking), class: "btn btn-primary" %>
+            <% end %>
+          </div>
         </div>
-      </div>
-
   </div>
 </div>
