--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -48,7 +48,7 @@
             %>
             <%= yield %>
             <p></p>
-              <%= link_to "Create booking ", bookings_path(@edit_booking), class: "btn btn-primary" %>
+              <%= link_to "Reserve ", bookings_path(@edit_booking), class: "btn btn-primary" %>
             <% end %>
           </div>
         </div>
