--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -13,6 +13,17 @@
   box-shadow: 3px 3px 5px black ;
 }
 
+.card1 {
+  max-height : 200px;
+  border-radius: 8px;
+  padding: 0;
+  background-color: transparent;
+  box-shadow: 3px 3px 5px black ;
+  position: sticky;
+  top: 20px;
+}
+
+
 .card-title {
   font-size: large;
   margin-bottom: 30px;
