--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -26,7 +26,7 @@
           </div>
         </div>
 
-        <div class="card w-25">
+        <div class="card1 w-25">
           <div class="card-header">
             Select your date
           </div>
