--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,14 +1,24 @@
-<%# <div class="container">
-<%#    <h1 class="text-center"> Hello this is bookings index!</h1>
-<%#      <%= form_tag bookings_path, class: "d-flex justify-content-center", id: "search-form", method: :get do %>
-<%#        <%= text_field_tag :query,
-          params[:query],
-          class: "form-control",
-          placeholder: "See your bookings here!"
-        %>
-<%#      <% end %>
-
-<%#</div>
-<% @bookings.each do |booking| %>
-  <%#<p><%= booking %>
-<%#<% end %>
+<div class="container">
+    <h1 class="text-center glow"> Your Bookings! </h1>
+  <div class="row justify-content-around">
+    <% @bookings.each do |booking| %>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-8">
+            <div class="card-body d-flex flex-column h-100 align-content-between justify-content-between">
+              <div>
+                <h5 class="card-title">Confirmation number: <%= booking.flat_id %></h5>
+                  <p class="card-description">From: <%= booking.start_date %></p>
+                  <p class="card-description">To: <%= booking.end_date %></p>
+              </div>
+              <div class="d-flex align-items-center justify-content-between">
+                <h3 class="m-0"><%  %></h3>
+                <%# price %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
