--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-image: image-url("Pettyhouse1.jpg");
+  background-image: image-url("BGHome1.jpg");
   background-size: cover;
   padding-top: 200px;
   }
@@ -37,7 +37,7 @@
 
   .glow {
     text-align: center;
-    font-size: 4em;
+    font-size: 3em;
     margin: 20px 0 20px 0;
     cursor:pointer;
     transition: all 0.5s;
