--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="banner">
   <div class="banner-content text-center">
-    <h1 class="glow">OMG, DID YOU HEAR THAT ?</h1>
+    <h1 class="glow">DID YOU HEAR THAT ?</h1>
       <p class="slogan">It's never been simpler to find a place for you and your pet !</p>
       <%= link_to "Explore Now! ", flats_path, class: "btn bt-lg btn-primary" %>
   </div>
