--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon center <%= yield(:navbar_class) %>">
-  <%= link_to "rooth_path", class: "navbar-brand" do %>
-    <%= image_tag "https://i.pinimg.com/564x/41/d2/13/41d213f62fe3d91287167c7369aa6fb4.jpg" %>
+  <%= link_to "rooth_path", class: "navbar-brand" do %><%= yield(:logo_class) %>
+    <%= image_tag "LogoPH.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
           </li>
         </div>
         <li class="nav-item dropdown">
-          <%= image_tag "https://i.pinimg.com/236x/f2/e0/80/f2e080c7d758bef20ecc897450cec463.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://i.pinimg.com/564x/a9/b2/fa/a9b2fa33a02e957f7cf28ad97efda244.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Action", "#", class: "dropdown-item" %>
             <%= link_to "Another action", "#", class: "dropdown-item" %>
