--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,6 +19,10 @@
     margin-bottom: 10px;
   }
 
+  p {
+    font-family: 'Familjen Grotesk', sans-serif;
+  }
+
   .slogan {
     font-size: 25px;
     font-weight: lighter;
@@ -38,7 +42,7 @@
   .glow {
     text-align: center;
     font-size: 3em;
-    margin: 20px 0 20px 0;
+    margin: 50px 0 30px 0;
     cursor:pointer;
     transition: all 0.5s;
   }
@@ -55,34 +59,11 @@
     animation: none;
   }
 
-  .glow:nth-child(2) {
-    color: #228DFF;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight:700;
-  }
-
-  .glow:nth-child(2):hover {
-    animation: blue 1.5s ease-in-out infinite alternate;
-  }
-
-  .glow:hover {
-    color: #ffffff;
-  }
-
   @keyframes red{
     from {
       text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
     }
     to {
       text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
-    }
-  }
-
-  @keyframes blue{
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228DFF, 0 0 70px #228DFF, 0 0 80px #228DFF, 0 0 100px #228DFF, 0 0 150px #228DFF;
-    }
-    to {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
     }
   }
