--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,6 +9,9 @@
   }
 
   .nav-link {
+    font-family: 'Familjen Grotesk', sans-serif;
+    font-size: 18px;
+    font-weight: lighter;
     padding-right: 400px;
     color: #fff;
   }
@@ -19,12 +22,9 @@
     margin-bottom: 10px;
   }
 
-  p {
-    font-family: 'Familjen Grotesk', sans-serif;
-  }
-
   .slogan {
-    font-size: 25px;
+    font-family: 'Familjen Grotesk', sans-serif;
+    font-size: 28px;
     font-weight: lighter;
     margin-bottom: 40px;
     color:white;
