bookings show updated

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,2 +1,44 @@
-<%= @booking.total_price %>
-<%= @booking.flat.title %>
+<html>
+<head>
+<style>
+  .card {
+    margin-top: 30px;
+  }
+</style>
+</head>
+<body>
+  <div class="card text-center w-75 mx-auto mp-auto margin-auto">
+    <div class="">
+      <div class="card-header">
+        Trip details
+      </div>
+      <div class="card-body">
+        <h5 class="card-title"><b><h3>Confirmed: <%= ((@booking.end_date)-(@booking.start_date)).truncate %> nights in <%= @booking.flat.title %></h3></b></h5>
+        <p class="card-text"> </p>
+        <table width="100%">
+        <tr>
+          <td colspan="3"><p>Your booking has been confirmed and an invoice will be sent to your email: <b><%= (@booking.user.email) %></b> .</p><p> Please note your <i>transaction reference number: <b><%= (@booking.flat_id) %></b></i> and print or save this page for your records.</p></td>
+        </tr>
+        <tr>
+          <td><footer>Check-in: <cite title="Source Title"><p> <%= @booking.start_date %> </p></cite></footer></td>
+        </tr>
+        <%# <loopstart:shoplst:> %>
+        <tr>
+          <td><footer>Check-out: <cite title="Source Title"><p> <%= @booking.end_date %> </p></cite></footer></td>
+        </tr>
+        <tr>
+          <td><footer>Total: <cite title="Source Title"><p> <%= @booking.total_price.truncate %> $  </p></cite></footer></td>
+        </tr>
+        <%# <loopend> %>
+        <p></p>
+      </table>
+        <%= link_to "Your trips! ", bookings_path(@bookings), class: "btn btn-primary" %>
+      </div>
+      <div class="card-footer text-muted">
+        Booked by: <%= (@booking.user.email) %>
+        <%= (@booking.created_at) %>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
