--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -20,15 +20,15 @@
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <p><%= @flat.description %></p>
-              <footer class="blockquote-footer">Pet Size: <cite title="Source Title"><p> <%= @flat.pet_max_size %> </p></cite></footer>
-              <footer class="blockquote-footer">Price: <cite title="Source Title"><p> <%= @flat.price.truncate %> $ </p></cite></footer>
+              <footer><cite title="Source Title"><p>Max pet size allowed: <%= @flat.pet_max_size %> kg </p></cite></footer>
+              <footer><cite title="Source Title"><p> <%= @flat.price.truncate %>$ per night.</p></cite></footer>
             </blockquote>
           </div>
         </div>
 
         <div class="card w-25">
           <div class="card-header">
-            Select your date
+            Choose your dates:
           </div>
           <div class="card-body">
           <%= simple_form_for [@flat, @booking] do |f| %>
