--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -20,8 +20,8 @@
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <p><%= @flat.description %></p>
-              <footer><cite title="Source Title"><p>Max pet size allowed: <%= @flat.pet_max_size %> kg </p></cite></footer>
-              <footer><cite title="Source Title"><p> <%= @flat.price.truncate %>$ per night.</p></cite></footer>
+              <footer><cite title="Source Title"><p>Max pet size allowed: <%= @flat.pet_max_size %> lb </p></cite></footer>
+              <footer><cite title="Source Title"><p> <%= @flat.price.truncate %> € per night.</p></cite></footer>
             </blockquote>
           </div>
         </div>
