booking index and seeds updated

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -13,7 +13,7 @@
       </div>
     </div>
       <div class="d-flex justify-content-around">
-        <div class="card w-50">
+        <div class="card w-50 mb-5">
           <div class="card-header">
             Details
           </div>
@@ -26,7 +26,7 @@
           </div>
         </div>
 
-        <div class="card w-25">
+        <div class="card w-25 mb-auto" style="max-width: 540px;">
           <div class="card-header">
             Choose your dates:
           </div>
