--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,10 +7,15 @@
 </style>
 </head>
 <body>
-  <div class="card text-center w-75 mx-auto mp-auto margin-auto">
+  <div class="card text-center w-75 mx-auto mp-auto margin-auto mb-5">
     <div class="">
       <div class="card-header">
         Trip details
+      </div>
+      <div class="my-3">
+        <% @booking.flat.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
       </div>
       <div class="card-body">
         <h5 class="card-title"><b><h3>Confirmed: <%= ((@booking.end_date)-(@booking.start_date)).truncate %> night(s) in <%= @booking.flat.title %></h3></b></h5>
