last updates pushed

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,8 +10,8 @@
                 <b><h2 class="card-title">Confirmation number: <%= booking.flat_id %></h2></b>
                   <h5 class="card-description"><b><%= ((booking.end_date)-(booking.start_date)).truncate %> nights in </b><i><%= booking.flat.address %></i></h5>
                   <h5 class="card-description"><b>Check-in: </b><%= booking.start_date %> / <b>Check-out: </b><%= booking.end_date %></h5>
-                  <p class="card-description"><b>Total: <%= booking.total_price.truncate %> €  </b></p>
-                  <%= link_to "Show more..", booking_path(booking), class: "btn btn-primary" %>
+                  <%# <p class="card-description"><b>Total: <%= booking.total_price.truncate €  </b></p> %>
+                  <%= link_to "Details..", booking_path(booking), class: "btn btn-primary" %>
               </div>
             </div>
           </div>
