--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,20 +7,18 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto">
+      <li class="nav-item active">
+        <%= link_to "Home", root_path, class: "nav-link"  %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Flats", flats_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Become a Host", new_flat_path, class: "nav-link" %>
+      </li>
       <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link"  %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Flats", flats_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Become a Host", new_flat_path, class: "nav-link" %>
-          </li>
-  </div>
         <li class="nav-item dropdown">
           <%= image_tag "https://i.pinimg.com/564x/a9/b2/fa/a9b2fa33a02e957f7cf28ad97efda244.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -29,10 +27,12 @@
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
-      <% else %>
+      <% end %>
+      <% if !user_signed_in? %>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
+  </div>
 </div>
