pet controller/view added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,15 @@
 body {
   background-color: #2a2a2a;
 }
+
+p {
+  font-family: 'Familjen Grotesk', sans-serif;
+}
+
+h1 {
+  font-family: 'Familjen Grotesk', sans-serif;
+}
+
+h2 {
+  font-family: 'Familjen Grotesk', sans-serif;
+}
