--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -2,13 +2,11 @@
   <div class="text-center">
     <div class="container-fluid">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-        <h3 class="maintext">Upload your cozy pet flat</h3>
-          <%= simple_form_for (@flat) do |f| %>
-            <%= f.input :title %>
-            <%= f.input :address %>
-            <%= f.input :price %>
-            <%= f.input :description %>
-            <%= f.input :pet_type, collection: ['small', 'medium', 'large'] %>
+        <h3 class="maintext">Upload your pet info</h3>
+          <%= simple_form_for (@pet) do |f| %>
+            <%= f.input :name %>
+            <%= f.input :breed %>
+            <%= f.input :size, collection: ['small', 'medium', 'large'] %>
             <%= f.input :photos, as: :file, input_html: { multiple: true } %>
             <%= f.submit class: 'btn btn-primary' %>
           <% end %>
