--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= f.error_notification %>
 
-            <div class="form-inputs">
+            <div class="form-inputs w-50 mb-50">
               <%= f.input :first_name,
                           required: true,
                           autofocus: true,
