--- a/app/views/pages/my_profile.html.erb
+++ b/app/views/pages/my_profile.html.erb
@@ -3,6 +3,7 @@
 <% @pets.each do |pet| %>
   <p><%= pet.name %></p>
   <p><%= pet.breed %></p>
+  <%= link_to "edit pet", edit_pet_path(pet) %>
 <% end %>
 
 <%= link_to "edit profile", edit_user_registration_path %>
